--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,21 @@
     <string name="app_name">Maestro</string>
     <string name="main_title">Maestro Courses</string>
     <string name="main_login">Login</string>
+    <string name="choose_action">Choose how you want to connect</string>
+    <string name="sign_in">Sign in</string>
+    <string name="Sign_up">Sign up</string>
+    <string name="register_title">Register your account</string>
+    <string name="name">Name</string>
+    <string name="enter_name">Enter your full name</string>
+    <string name="username">Username</string>
+    <string name="enter_username">Enter a username</string>
+    <string name="email">Email address</string>
+    <string name="enter_email">Enter your email address</string>
+    <string name="password">Password</string>
+    <string name="enter_password">Enter your password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="password_again">Enter your password again</string>
+    <string name="already_have">Already have an account?</string>
+    <string name="remember_me">Remember me</string>
+    <string name="submit">Submit</string>
 </resources>
