--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="choose_action">Choose how you want to connect</string>
     <string name="sign_in">Sign in</string>
     <string name="Sign_up">Sign up</string>
+    <string name="Sign_out">Sign out</string>
     <string name="register_title">Register your account</string>
     <string name="name">Name</string>
     <string name="enter_name">Enter your full name</string>
