--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -27,4 +27,6 @@
     <string name="reset_password_note">ברגע שתלחץ על \'אפס סיסמה\', אתה תקבל מייל על מנת לאפס את הסיסמה</string>
     <string name="check_email">בדוק את המייל שלך לאיפוס הסיסמא</string>
     <string name="save_pic">שמור תמונה</string>
+    <string name="hello">שלום</string>
+    <string name="chat">צ\'אט</string>
 </resources>
