--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="Sign_up">Sign up</string>
     <string name="Sign_out">Sign out</string>
     <string name="register_title">Register your account</string>
+    <string name="login_or_register">Login or Register</string>
     <string name="name">Name</string>
     <string name="enter_name">Enter your full name</string>
     <string name="username">Username</string>
@@ -29,4 +30,5 @@
     <string name="hello">hello</string>
     <string name="chat">Chat</string>
     <string name="edit_pic">Edit image</string>
+    <string name="register_to_course">Register to the course</string>
 </resources>
