--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -32,4 +32,5 @@
     <string name="chat">צ\'אט</string>
     <string name="edit_pic">החלף תמונה</string>
     <string name="register_to_course">הרשם לקורס</string>
+    <string name="notif">התראות</string>
 </resources>
