--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="reset_password_note">By clicking RESET, you will receive an email to reset you password</string>
     <string name="check_email">Please check your email to reset the password</string>
     <string name="save_pic">Save Picture</string>
-    <string name="hello">hello</string>
+    <string name="hello">hello,</string>
     <string name="chat">Chat</string>
     <string name="edit_pic">Edit image</string>
     <string name="register_to_course">Register to the course</string>
@@ -35,4 +35,8 @@
     <string name="make_sure_logout">Are you sure you want to log out?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="contacts">Contacts</string>
+    <string name="add_pic">Add Picture</string>
+    <string name="type">Type a message</string>
+    <string name="chats">Chats</string>
 </resources>
