--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -29,7 +29,7 @@
     <string name="check_email">בדוק את המייל שלך לאיפוס הסיסמא</string>
     <string name="save_pic">שמור תמונה</string>
     <string name="hello">שלום</string>
-    <string name="hello_coma">hello,</string>
+    <string name="hello_coma">שלום,</string>
     <string name="chat">צ\'אט</string>
     <string name="edit_pic">החלף תמונה</string>
     <string name="register_to_course">הרשם לקורס</string>
